<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.panaut.loancalculator.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/linearLayoutRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentLeft="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activityMain_lblCapital"/>

                    <EditText
                        android:id="@+id/txtCapital"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="4"
                        android:layout_marginLeft="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/activityMain_lblParticipation"/>

                    <EditText
                        android:id="@+id/txtParticipation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="2"
                        android:layout_marginLeft="15dp"
                        android:text="0"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="%"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layoutInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutRow1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activityMain_lblIterestRate"
                    android:layout_weight="20"/>

                <EditText
                    android:id="@+id/txtInterest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="2"
                    android:layout_marginLeft="15dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="%"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutInterestDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutInterest"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/activityMain_lblInterestRateDescription"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCalculationMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutInterestDescription"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activityMain_lblCalculationMode"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutInterest"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbLayoutCalculationModePeriod"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="calculationTypeChanged"
                            android:text="@string/activityMain_lblCalculationMode_Period"
                            android:checked="true" />

                        <RadioButton
                            android:id="@+id/rbLayoutCalculationModeInstalment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="calculationTypeChanged"
                            android:text="@string/activityMain_lblCalculationMode_Instalment" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutInputParameterContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutCalculationMode"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layoutSetPeriodCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/activityMain_lblPeriod"/>

                    <EditText
                        android:id="@+id/txtPeriodCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="3"
                        android:layout_weight="6"
                        android:layout_marginLeft="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutSetInstalment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/activityMain_lblInstalment"/>

                    <EditText
                        android:id="@+id/txtInstalment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:layout_weight="6"
                        android:layout_marginLeft="15dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPrematurePaybackMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutInputParameterContainer"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activityMain_lblYearlyPayments_caption"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/activityMain_lblYearlyPayments_description"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbLayoutPrematurePaybackModeYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="additionalPaymentModeChanged"
                        android:text="@string/activityMain_yearlyPayments_yes"/>

                    <RadioButton
                        android:id="@+id/rbLayoutPrematurePaybackModeNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="additionalPaymentModeChanged"
                        android:checked="true"
                        android:text="@string/activityMain_yearlyPayments_no"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPrematurePayback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutPrematurePaybackMode"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activityMain_lblYearlyPaybackMode"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbPPConstantPeriod"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/activityMain_lblYearlyPayback_period"
                        android:checked="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:textSize="12sp"
                        android:text="@string/activityMain_lblYearlyPayback_period_description"/>

                    <RadioButton
                        android:id="@+id/rbPPConstantInstalment"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/activityMain_rbYearlyPayback_instalment"
                        android:checked="false" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:textSize="12sp"
                        android:text="@string/activityMain_rbYearlyPayback_instalment_description"/>
                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="5"
        android:id="@+id/layoutCommandline"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/activityMain_cmdDetailedPlan"
            android:layout_weight="5"
            android:onClick="displayDetails" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/activityMain_cmdOverview"
            android:layout_weight="5"
            android:onClick="displayOverview" />
    </LinearLayout>
</LinearLayout>
