<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PaymentPlanActivity">

    <RelativeLayout
        android:id="@+id/loanDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loanDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="@string/activityPaymentPlan_lblLoanDetailsTitle"/>

        <LinearLayout
            android:id="@+id/layoutLdCapital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loanDetailsTitle"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblLdCapital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activityPaymentPlan_loanDetails_capital" />

            <TextView
                android:id="@+id/txtLdCapital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textStyle="bold"
                android:text="65000 €" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLdPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutLdCapital"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblLdPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activityPaymentPlan_loanDetails_period" />

            <TextView
                android:id="@+id/txtLdPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textStyle="bold"
                android:text="240" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLdInterestRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutLdPeriod"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblLdInterestRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activityPaymentPlan_loanDetails_interestRate" />

            <TextView
                android:id="@+id/txtLdInterestRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textStyle="bold"
                android:text="4 %" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLdInterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutLdInterestRate"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblLdInterest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activityPaymentPlan_loanDetails_totalInterestInPercent" />

            <TextView
                android:id="@+id/txtLdInterest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textStyle="bold"
                android:text="44 %" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/listHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loanDetails"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/paymentPlanTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="@string/activityPaymentPlan_loanPayback_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLhIndex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="12"
                android:gravity="start|center_vertical"
                android:text="@string/activityPaymentPlan_loanPayback_header_no" />

            <TextView
                android:id="@+id/txtLhInstalment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="start|center_vertical"
                android:text="@string/activityPaymentPlan_loanPayback_header_instalment" />

            <TextView
                android:id="@+id/txtLhInterest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="start|center_vertical"
                android:text="@string/activityPaymentPlan_loanPayback_header_interest" />

            <TextView
                android:id="@+id/txtLhCapital"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center|center_vertical"
                android:text="@string/activityPaymentPlan_loanPayback_header_remainingDebt" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lvPaymentPlan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/listHeader">
    </ListView>

</RelativeLayout>
